@@ -1,3 +1,6 @@
+24
+- Rework Python dependencies
+
 23
 - Update to 2.3.1
 - Update Python dependencies
